force-app/main/default/objects/Line_Segment_Revenue__c/Line_Segment_Revenue__c.object-meta.xml
<CustomObject>
    <description>Line Segment Revenue; links Segment to Quote Line with Unit Price and Quantity.</description>
    <label>Line Segment Revenue</label>
    <nameField>
        <label>Line Segment Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Segment Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>