force-app/main/default/objects/Line_Segment_Revenue__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <label>Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Line Segment Revenues</relationshipLabel>
    <relationshipName>Line_Segment_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>