force-app/main/default/objects/Line_Segment_Revenue__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Line Segment Revenues</relationshipLabel>
    <relationshipName>Line_Segment_Revenues</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>