force-app/main/default/objects/Line_Segment_Revenue__c/fields/Segment_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Segment_Revenue_Amount__c</fullName>
    <label>Segment Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>